fix doc layout problem on narrow displays (mobile)

--- a/src/app/help/faqs/faqs.component.scss
+++ b/src/app/help/faqs/faqs.component.scss
@@ -17,7 +17,7 @@
   }
 
   .faq-table {
-    min-width: 750px;
+    min-width: 440px;
   }
 
   .mat-column-position,
